--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -31,6 +31,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/sign_in_btn_google_plus"
             style="@style/AppTheme.Button.GooglePlus"
             android:layout_width="@dimen/width_button_social_networks"
             android:layout_height="wrap_content"
@@ -117,7 +118,7 @@
         android:text="Sign In" />
 
     <TextView
-        android:id="@+id/sign_in_tv"
+        android:id="@+id/sign_up_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
