--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -55,7 +55,7 @@
         android:text="Sign Up" />
 
     <TextView
-        android:id="@+id/sign_up_tv"
+        android:id="@+id/sign_in_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
