--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,9 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="AppTheme.TextView.Profile.Username" parent="Base.V7.Widget.AppCompat.AutoCompleteTextView">
+        <item name="android:textSize">@dimen/text_size_normal</item>
+        <item name="android:layout_marginBottom">@dimen/activity_vertical_margin</item>
+    </style>
+
 </resources>
