fix bug with back press + toolbar shadow

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="128dp"
             android:background="?attr/colorPrimary"
-            android:gravity="top"
+            android:gravity="start|top"
             android:minHeight="?attr/actionBarSize"
             app:titleTextColor="@android:color/white" />
 
