--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -81,7 +81,7 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/sign_in_et_login"
+        android:id="@+id/sign_in_et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_left_right_edit_text_login"
