--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -17,7 +17,7 @@
         android:textSize="30sp" />
 
     <EditText
-        android:id="@+id/sign_up_et_login"
+        android:id="@+id/sign_up_et_full_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_left_right_edit_text_login"
@@ -25,8 +25,27 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/edit_box"
         android:elevation="2dp"
-        android:hint="Login"
+        android:hint="Full name"
+        android:inputType="textPersonName"
+        android:maxLength="50"
         android:padding="12dp"
+        android:singleLine="true"
+        android:textColorHint="@color/colorSignInEditTextHint" />
+
+    <EditText
+        android:id="@+id/sign_up_et_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_left_right_edit_text_login"
+        android:layout_marginRight="@dimen/margin_left_right_edit_text_login"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/edit_box"
+        android:elevation="2dp"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:maxLength="50"
+        android:padding="12dp"
+        android:singleLine="true"
         android:textColorHint="@color/colorSignInEditTextHint" />
 
     <EditText
@@ -40,7 +59,9 @@
         android:elevation="2dp"
         android:hint="Password"
         android:inputType="textPassword"
+        android:maxLength="16"
         android:padding="12dp"
+        android:singleLine="true"
         android:textColorHint="@color/colorSignInEditTextHint" />
 
     <Button
