--- a/app/src/main/res/layout/fragment_my_compares.xml
+++ b/app/src/main/res/layout/fragment_my_compares.xml
@@ -3,9 +3,12 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundPrimary">
 
-    <TextView
-        android:text="text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_my_compares"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="78dp"
+        android:background="@color/colorBackgroundPrimary"
+        android:scrollbars="vertical" />
 
 </LinearLayout>
