--- a/app/src/main/res/drawable/toolbar_shadow.xml
+++ b/app/src/main/res/drawable/toolbar_shadow.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
     <gradient
         android:angle="90"
-        android:endColor="#88333333"
+        android:endColor="#40000000"
         android:startColor="@android:color/transparent" />
+</shape><!--<shape xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:shape="rectangle">-->
 
-</shape>
+    <!--<gradient--><!--android:angle="90"--><!--android:endColor="#88333333"--><!--android:startColor="@android:color/transparent" />-->
 
-    <!--android:endColor="#88333333"-->
+    <!--</shape>-->
