--- a/app/src/main/res/layout/navigation_header_layout.xml
+++ b/app/src/main/res/layout/navigation_header_layout.xml
@@ -28,7 +28,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="16dp"
-            android:text="Alexander Marinovskiy"
+            android:text="full name"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:padding="16dp"
-            android:text="alexander.marinovskiy@gmail.com"
+            android:text="email"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
 
