--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,97 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#263238"
+    android:background="#FFFFFF"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:context=".screens.activities.SignInActivity">
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="18dp"
-        android:text="LOGIN"
-        android:textColor="#FFFFFF"
+        android:layout_gravity="start"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:text="Login"
+        android:textAllCaps="false"
+        android:textColor="#03A9F4"
         android:textSize="24sp" />
 
-    <EditText
+    <TextView
+        android:id="@+id/tv_login_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_below="@id/tv_login"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:layout_marginTop="24dp"
-        android:hint="Email"
-        android:paddingBottom="18dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="24dp"
-        android:hint="Password"
-        android:paddingBottom="18dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF" />
-
-    <Button
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="24dp"
-        android:text="LOGIN"
+        android:text="Sign in with your email and password"
+        android:textColor="#757575"
         android:textSize="18sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/et_sign_in_email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Forgot Password?"
-        android:textColor="#BDBDBD"
+        android:layout_below="@id/tv_login_text"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/edittextline"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:paddingBottom="16dp"
+        android:paddingLeft="10dp"
+        android:textColor="#9E9E9E"
+        android:textColorHint="#9E9E9E"
         android:textSize="16sp" />
 
-    <TextView
+    <EditText
+        android:id="@+id/et_sign_in_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_sign_in_email"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/edittextline"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:paddingBottom="16dp"
+        android:paddingLeft="10dp"
+        android:textColor="#9E9E9E"
+        android:textColorHint="#9E9E9E"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/btn_sign_in"
+        style="?borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/et_sign_in_password"
+        android:layout_marginRight="24dp"
         android:layout_marginTop="24dp"
-        android:text="Log In Using"
-        android:textColor="#BDBDBD"
+        android:background="#03A9F4"
+        android:text="LOGIN"
+        android:textAllCaps="true"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btn_go_sign_up"
+        style="?borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_sign_in_password"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_toLeftOf="@id/btn_sign_in"
+        android:text="SIGN UP"
+        android:textAllCaps="true"
+        android:textColor="#03A9F4"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btn_sign_in_skip_login"
+        style="?borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/btn_sign_in"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_toLeftOf="@id/btn_sign_in"
+        android:text="Skip >>"
+        android:textAllCaps="false"
+        android:textColor="#03A9F4"
         android:textSize="16sp" />
+
+    <!--<TextView-->
+    <!--android:id="@+id/tv_skip_login"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:layout_below="@id/btn_sign_in"-->
+    <!--android:layout_marginRight="24dp"-->
+    <!--android:layout_marginTop="24dp"-->
+    <!--android:text="Skip >>"-->
+    <!--android:textAllCaps="false"-->
+    <!--android:textColor="#03A9F4"-->
+    <!--android:textSize="18sp" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="18dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_sign_in_google"
+            style="@style/AppTheme.Button.GooglePlus"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:src="@mipmap/ic_social_vk" />
+            android:layout_marginRight="4dp"
+            android:layout_weight="1"
+            android:text="Login with Google +"
+            android:textSize="14sp" />
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_sign_in_facebook"
+            style="@style/AppTheme.Button.Vk"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:src="@mipmap/ic_social_google" />
+            android:layout_marginLeft="4dp"
+            android:layout_weight="1"
+            android:text="Login with Facebook"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Create an Account"
-        android:textColor="#BDBDBD"
-        android:textSize="16sp" />
-
-</LinearLayout>
+</RelativeLayout>
