--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorSignInBackground"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:context=".screens.activities.SignInActivity">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,14 +38,20 @@
             android:elevation="2dp"
             android:text="Sign in with G+" />
 
+        <!--<com.facebook.login.widget.LoginButton-->
+            <!--android:id="@+id/login_button"-->
+            <!--android:layout_marginLeft="6dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"/>-->
+
         <Button
             style="@style/AppTheme.Button.Vk"
-            android:id="@+id/sign_in_btn_vk"
+            android:id="@+id/login_button"
             android:layout_width="@dimen/width_button_social_networks"
             android:layout_height="wrap_content"
             android:layout_marginLeft="6dp"
             android:elevation="2dp"
-            android:text="Sign in with Vk" />
+            android:text="Sign in with Fb" />
 
     </LinearLayout>
 
